# PreviewGram

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  test_application.py
.github/workflows/: black.yml  build-docs.yaml  codeql-analysis.yml  python-publish.yml
docs/: index.html  make.py  search.js  sitemap.xml  src.html
docs/docs/: index.html  search.js  src.html
docs/docs/src/: database.html  model.html  ui.html
docs/docs/src/database/: __parser__.html
docs/docs/src/model/: __parser__.html  db.html  page.html
docs/docs/src/ui/: channel.html  components.html  dialog.html  ui.html  widgets.html
docs/docs/src/ui/components/: add_channel.html  chan_list.html  engine.html  top_bar.html
docs/docs/src/ui/widgets/: engine.html  open_dialog.html  side_bar.html  top_bar.html
docs/src/: model.html  ui.html
docs/src/model/: __parser__.html  db.html
docs/src/ui/: channel.html  components.html
docs/src/ui/components/: add_channel.html  chan_list.html  engine.html  top_bar.html
src/: __init__.py
src/database/: __init__.py  __parser__.py
src/model/: __init__.py  __parser__.py  db.py
src/ui/: __init__.py  channel.py  dialog.py
src/ui/components/: __init__.py  add_channel.py  chan_list.py  engine.py  top_bar.py
src/ui/widgets/: __init__.py  engine.py  open_dialog.py  side_bar.py  top_bar.py
