[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "Private-Previewgram"
version = "1.1"
description = "PreviewGram is for users that wants get a more private experience with the Telegram's Channel."
authors = ["RickBarretto"]

[tool.poetry.dependencies]
PySide6 = "^6.2.2"

[tool.poetry.dev-dependencies]
build = "0.7.0"
setuptools = "^57.4.0"
black = "^21.12b0"
pdoc = "^8.0.1"