[metadata]
name = Private PreviewGram
version = 1.2
description = PreviewGram is for users that wants get a more private experience with the Telegrams Channel.
author = RickBarretto


[options]
packages = 
    src
    src.database
    src.ui
    src.ui.widgets
include_package_data = True
install_requires = 
    pip >= "21.3.1";python_version >= "3.10.0"
    PySide6>= "6.2.2"
    pdoc>="8.0.1"

python_requires >= 3.10

[options.entry_points]
console_scripts = 
    ppg = src:start_app